# wigeon

./: .gitignore  CEVA_AUTOMATION_GUIDE.md  CONTRIBUTING.md  DASHBOARD_ADDED_SUMMARY.md  DASHBOARD_FEATURE_COMPLETE.md  DASHBOARD_GUIDE.md  DEPLOYMENT_COMPLETE.md  FINAL_DASHBOARD_SUMMARY.txt  FINAL_SUMMARY.md  HANDOFF.md  LICENSE  PROJECT_COMPLETE.md  QUICK-SETUP.md  QUICK_START.md  README.md  RECOMMENDED_WORKFLOW.md  SAAS-ROADMAP.md  SESSION_COMPLETE.md  SETUP.md  SIMPLE_START.md  START_HERE.md  WEB-DASHBOARD-COMPLETE.md  auto_ceva_complete.sh  auto_fetch_ceva.sh  ceva_fetch_recipe.yaml  config.example.json  fetch_ceva.sh  fetch_ceva_simple.sh  pyproject.toml  requirements-dev.txt  requirements.txt  wigeon.py  wigeon_recipe.yaml
.github/workflows/: ci.yml
automation/: CEVAReportCollector.gs  SETUP-GUIDE.md  WIGEON_Collector_Universal.gs  WigeonCollector.gs  wigeon-auto-ingest.yaml
docs/: USER_GUIDE.md
samples/: create_ceva_samples.py  create_sample_data.py
scripts/: auto_download_ceva.py  dashboard.py  database_schema.py  download_ceva_reports.py  exceptions.py  fetch_ceva_reports.py  file_parser.py  gmail_api_fetch.py  gmail_downloader.py  watch_and_ingest.py  wigeon_config.py  wigeon_processor.py
tests/: conftest.py  test_database_schema.py  test_file_parser.py  test_wigeon_cli.py  test_wigeon_processor.py
web-dashboard/: DEPLOYMENT-GUIDE.md  README.md  index.html
